@@ -21,6 +21,7 @@ import org.robolectric.ParameterizedRobolectricTestRunner.Parameter;
 import org.robolectric.ParameterizedRobolectricTestRunner.Parameters;
 
 import org.chromium.base.Callback;
+import org.chromium.base.FeatureOverrides;
 import org.chromium.base.test.BaseRobolectricTestRule;
 import org.chromium.base.test.util.Features;
 import org.chromium.chrome.browser.flags.ChromeFeatureList;
@@ -29,8 +30,9 @@ import org.chromium.chrome.browser.password_manager.PasswordManagerHelper;
 import org.chromium.chrome.browser.preferences.Pref;
 import org.chromium.components.prefs.PrefService;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 
 /** Unit tests for SafetyHubPasswordsFetchService. */
 @RunWith(ParameterizedRobolectricTestRunner.class)
@@ -38,19 +40,20 @@ import java.util.Collection;
     ChromeFeatureList.SAFETY_HUB,
     ChromeFeatureList.SAFETY_HUB_WEAK_AND_REUSED_PASSWORDS
 })
-// TODO(crbug.com/390442009): Update the tests when the logic starts taking the flag into account
-// explicitly. For now the flag is checked in PasswordManagerHelper which gets indirectly
-// invoked by these tests.
-@Features.DisableFeatures(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID)
 public class SafetyHubPasswordsFetchServiceTest {
     private static final String TEST_EMAIL_ADDRESS = "test@email.com";
 
-    @Parameters
-    public static Collection<Object> data() {
-        return Arrays.asList(new Object[] {true, false});
+    /** Returns all possible combinations for test parameterization. */
+    @Parameters(name = "{0}, {1}")
+    public static Collection<Object[]> data() {
+        Collection<Object[]> data = new ArrayList<>();
+        for (boolean hasAccount : List.of(true, false)) {
+            for (boolean isLoginDbDeprecationEnabled : List.of(true, false)) {
+                data.add(new Object[] {hasAccount, isLoginDbDeprecationEnabled});
+            }
+        }
+        return data;
     }
-
-    @Parameter public boolean hasAccount;
 
     @Rule(order = -2)
     public BaseRobolectricTestRule mBaseRule = new BaseRobolectricTestRule();
@@ -58,6 +61,12 @@ public class SafetyHubPasswordsFetchServiceTest {
     @Rule public SafetyHubTestRule mSafetyHubTestRule = new SafetyHubTestRule();
 
     @Mock private Callback<Boolean> mTaskFinishedCallback;
+
+    @Parameter(0)
+    public boolean hasAccount;
+
+    @Parameter(1)
+    public boolean mIsLoginDbDeprecationEnabled;
 
     private PrefService mPrefService;
     private FakePasswordCheckupClientHelper mPasswordCheckupClientHelper;
@@ -68,6 +77,11 @@ public class SafetyHubPasswordsFetchServiceTest {
         // Needed because of BaseRobolectricTestRule.
         MockitoAnnotations.openMocks(this);
 
+        if (mIsLoginDbDeprecationEnabled) {
+            FeatureOverrides.enable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
+        } else {
+            FeatureOverrides.disable(ChromeFeatureList.LOGIN_DB_DEPRECATION_ANDROID);
+        }
         mPrefService = mSafetyHubTestRule.getPrefService();
         mPasswordCheckupClientHelper = mSafetyHubTestRule.getPasswordCheckupClientHelper();
         mPasswordManagerHelper =
@@ -92,7 +106,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
     @Test
     public void noPreferencesUpdated_whenUPMDisabled() {
-        mSafetyHubTestRule.setUPMStatus(false);
+        mSafetyHubTestRule.setPasswordManagerAvailable(false, mIsLoginDbDeprecationEnabled);
 
         new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
                 .fetchPasswordsCount(mTaskFinishedCallback);
@@ -105,6 +119,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
     @Test
     public void noPreferencesUpdated_whenFetchFails() {
+        mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
         mPasswordCheckupClientHelper.setError(new Exception());
 
         new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
@@ -118,6 +133,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
     @Test
     public void somePreferencesUpdated_fetchFailsForOneCredentialType() {
+        mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
         mPasswordCheckupClientHelper.setWeakCredentialsError(new Exception());
         int breachedCredentialsCount = 5;
         int reusedCredentialsCount = 3;
@@ -136,6 +152,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
     @Test
     public void preferencesUpdated_whenFetchSucceeds() {
+        mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
         int breachedCredentialsCount = 5;
         int weakCredentialsCount = 4;
         int reusedCredentialsCount = 3;
@@ -155,6 +172,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
     @Test
     public void noPreferencesUpdated_whenCheckupFails() {
+        mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
         mPasswordCheckupClientHelper.setError(new Exception());
 
         new SafetyHubPasswordsFetchService(mPasswordManagerHelper, mPrefService, getAccount())
@@ -168,6 +186,7 @@ public class SafetyHubPasswordsFetchServiceTest {
 
     @Test
     public void preferencesUpdated_whenCheckupSucceeds() {
+        mSafetyHubTestRule.setPasswordManagerAvailable(true, mIsLoginDbDeprecationEnabled);
         int breachedCredentialsCount = 5;
         int weakCredentialsCount = 4;
         int reusedCredentialsCount = 3;
